double attack serve

--- a/src/en/index.html
+++ b/src/en/index.html
@@ -339,8 +339,7 @@
         <h3>player1</h3>
         <div>
           <div class="serve">
-            <div><b>1 step serve</b><input id="player1-1-step-serve" type="checkbox" checked="checked">
-            </div>
+            <div><b>1 step serve</b><input id="player1-1-step-serve" type="checkbox" checked="checked"></div>
             <div><input id="player-1-skill-0-checkbox" type="checkbox" checked="checked"> <label>Break net</label></div>
             <div><input id="player-1-skill-1-checkbox" type="checkbox" checked="checked"> <label>Break net(fake,
                 flat)</label>
@@ -363,6 +362,17 @@
             </div>
             <div><input id="player-1-skill-9-checkbox" type="checkbox" checked="checked"> <label>Tail thunder(fake,
                 flat)</label></div>
+
+            <hr style="width: 100%;">
+            <div><b>2 step serve</b><input id="player1-2-step-serve" type="checkbox" checked="checked">
+            </div>
+            <div><input id="player-1-skill-10-checkbox" type="checkbox" checked="checked"> <label>F</label>
+            </div>
+            <div><input id="player-1-skill-11-checkbox" type="checkbox" checked="checked"> <label>G</label></div>
+            <div><input id="player-1-skill-12-checkbox" type="checkbox" checked="checked"> <label>R</label></div>
+            <div><input id="player-1-skill-13-checkbox" type="checkbox" checked="checked"> <label>Fake</label></div>
+
+
           </div>
         </div>
 
@@ -385,12 +395,23 @@
             </div>
             <div><input id="player-2-skill-5-checkbox" type="checkbox" checked="checked"> <label>Net thunder(fake,
                 flat)</label></div>
+
             <hr style="width: 100%;">
             <div><b>tail serve</b><input id="player2-tail-serve" type="checkbox" checked="checked"></div>
             <div><input id="player-2-skill-6-checkbox" type="checkbox" checked="checked"> <label>Tail thunder</label>
             </div>
             <div><input id="player-2-skill-7-checkbox" type="checkbox" checked="checked"> <label>Tail thunder(fake,
                 flat)</label></div>
+
+            <hr style="width: 100%;">
+            <div><b>2 step serve</b><input id="player2-2-step-serve" type="checkbox" checked="checked">
+            </div>
+            <div><input id="player-2-skill-8-checkbox" type="checkbox" checked="checked"> <label>F</label>
+            </div>
+            <div><input id="player-2-skill-9-checkbox" type="checkbox" checked="checked"> <label>G</label></div>
+            <div><input id="player-2-skill-10-checkbox" type="checkbox" checked="checked"> <label>R</label></div>
+            <div><input id="player-2-skill-11-checkbox" type="checkbox" checked="checked"> <label>Fake</label></div>
+
           </div>
         </div>
       </div>
